--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>3D Horror Pacman - Escape the Matrix</title>
-    <link rel="stylesheet" href="style-minimal.css">
-</head>
-<body>
-    <!-- UI elements hidden for testing -->
-    <script type="module" src="game-functional.js"></script>
-</body>
+    <link rel="stylesheet" href="style-minimal.css" />
+  </head>
+  <body>
+    <!-- Modular version -->
+    <script type="module" src="src/main.js"></script>
+  </body>
 </html>
