added jumpscare when pacman runs into ghost

--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="style-minimal.css" />
   </head>
   <body>
+    <!-- Jumpscare Overlay -->
+    <div id="jumpscare-overlay" class="hidden">
+      <div class="jumpscare-face"></div>
+    </div>
+    
     <!-- Modular version -->
     <script type="module" src="src/main.js"></script>
   </body>
